--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/preset-env": "^7.13.15",
     "@babel/preset-typescript": "^7.13.0",
-    "clean-webpack-plugin": "*",
+    "clean-webpack-plugin": "^3.0.0",
     "cross-env": "^7.0.3",
     "css-loader": "^5.2.4",
     "eslint-webpack-plugin": "^2.5.4",
