--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cross-env": "^7.0.3",
     "css-loader": "^5.2.4",
     "eslint-webpack-plugin": "^2.5.4",
+    "express": "^4.17.1",
     "file-loader": "^6.2.0",
     "fork-ts-checker-webpack-plugin": "^6.2.4",
     "html-webpack-plugin": "^5.3.1",
