--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "cross-env NODE_ENV=development webpack serve",
-    "build": "cross-env NODE_ENV=production webpack --config webpack.config.js --mode production",
-    "heroku-postbuild": "npm install && cd.. && npm run build"
+    "build": "cross-env NODE_ENV=production webpack --config webpack.config.js --mode production"
   },
   "author": "",
   "license": "ISC",
