--- a/package.json
+++ b/package.json
@@ -9,11 +9,16 @@
   },
   "author": "",
   "license": "ISC",
+  "resolutions": {
+    "babel-core": "7.13.16"
+  },
   "devDependencies": {
+    "@babel/core": "^7.13.16",
     "@babel/plugin-proposal-class-properties": "^7.13.0",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/preset-env": "^7.13.15",
     "@babel/preset-typescript": "^7.13.0",
+    "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^3.0.0",
     "cross-env": "^7.0.3",
     "css-loader": "^5.2.4",
@@ -39,7 +44,6 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.5.1",
-    "babel-loader": "^8.2.2",
     "redux": "^4.1.0",
     "redux-batched-actions": "^0.5.0"
   }
