--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "clean-webpack-plugin": "^3.0.0",
     "cross-env": "^7.0.3",
     "css-loader": "^5.2.4",
+    "eslint": "^7.25.0",
     "eslint-webpack-plugin": "^2.5.4",
     "express": "^4.17.1",
     "file-loader": "^6.2.0",
