--- a/package.json
+++ b/package.json
@@ -13,9 +13,25 @@
   "scripts": {
     "start": "node server.js",
     "dev": "cross-env NODE_ENV=development webpack serve",
-    "build": "cross-env NODE_ENV=production webpack --config webpack.config.js --mode production"
+    "build": "cross-env NODE_ENV=production webpack --config webpack.config.js --mode production",
+    "typecheck": "tsc --noEmit"
   },
-  "author": "",
+  "lint-staged": {
+    "*.{js,ts}": [
+      "eslint --fix --ext .ts,.js",
+      "prettier --write"
+    ],
+    "*.{less,scss,css}": [
+      "stylelint --fix",
+      "prettier --write"
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run typecheck"
+    }
+  },
+  "author": "Pavel Safaryan",
   "license": "ISC",
   "resolutions": {
     "babel-core": "7.13.16"
@@ -35,6 +51,7 @@
     "file-loader": "^6.2.0",
     "fork-ts-checker-webpack-plugin": "^6.2.4",
     "html-webpack-plugin": "^5.3.1",
+    "husky": "^6.0.0",
     "icon-font-loader": "^3.0.2",
     "image-minimizer-webpack-plugin": "^2.2.0",
     "imagemin-gifsicle": "^7.0.0",
