--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run typecheck"
+      "pre-commit": "lint-staged && npm run typecheck"
     }
   },
   "author": "Pavel Safaryan",
@@ -59,8 +59,10 @@
     "imagemin-optipng": "^8.0.0",
     "imagemin-svgo": "^9.0.0",
     "mini-css-extract-plugin": "^1.5.0",
+    "prettier": "^2.2.1",
     "sass": "^1.32.11",
     "sass-loader": "^11.0.1",
+    "stylelint": "^13.13.0",
     "typescript": "^4.2.4",
     "url-loader": "^4.1.1",
     "webpack": "^5.35.1",
